hphp/test/zend/good/ext/standard/tests/strings/crypt_blowfish.php.skipif
<?php
if (!function_exists('crypt') || !defined("CRYPT_BLOWFISH")) {
    die("SKIP crypt()-blowfish is not available");
}
?>