hphp/test/zend/bad/ext/standard/tests/strings/bug20934.php.skipif
<?php
if (!function_exists("utf8_encode") || !function_exists("utf8_decode")) {
	die("SKIP Neither utf8_encode() nor utf8_decode() are available");
}
?> 